<resources>
    <string name="app_name">My Calculator</string>
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="no_7">7</string>
    <string name="no_8">8</string>
    <string name="no_9">9</string>
    <string name="no_0">0</string>
<!--    <string name="no_00">00</string>-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
<!--    <string name="percent">%</string>-->
    <string name="point">.</string>
    <string name="clear">clr</string>
<!--    <string name="back">back</string>-->
</resources>