<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/dividebtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/divide"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/timesbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ninebtn"
        app:layout_constraintTop_toBottomOf="@+id/editNum"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/ninebtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_9"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sixbtn"
        app:layout_constraintEnd_toStartOf="@+id/dividebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eightbtn"
        app:layout_constraintTop_toBottomOf="@+id/editNum"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/onebtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_1"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/pointbtn"
        app:layout_constraintEnd_toStartOf="@+id/twobtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/twobtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_2"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/zerobtn"
        app:layout_constraintEnd_toStartOf="@+id/threebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onebtn"
        app:layout_constraintTop_toBottomOf="@+id/fivebtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/threebtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_3"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/plusbtn"
        app:layout_constraintEnd_toStartOf="@+id/minusbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twobtn"
        app:layout_constraintTop_toBottomOf="@+id/sixbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/equalsbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/equals"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusbtn"
        app:layout_constraintTop_toBottomOf="@+id/minusbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/zerobtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_0"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pointbtn"
        app:layout_constraintTop_toBottomOf="@+id/twobtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/eightbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_8"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fivebtn"
        app:layout_constraintEnd_toStartOf="@+id/ninebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sevenbtn"
        app:layout_constraintTop_toBottomOf="@+id/editNum"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/sevenbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_7"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fourbtn"
        app:layout_constraintEnd_toStartOf="@+id/eightbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNum"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/sixbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_6"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/threebtn"
        app:layout_constraintEnd_toStartOf="@+id/timesbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fivebtn"
        app:layout_constraintTop_toBottomOf="@+id/ninebtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/fivebtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_5"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/twobtn"
        app:layout_constraintEnd_toStartOf="@+id/sixbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourbtn"
        app:layout_constraintTop_toBottomOf="@+id/eightbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/fourbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/no_4"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/onebtn"
        app:layout_constraintEnd_toStartOf="@+id/fivebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/timesbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/times"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/minusbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixbtn"
        app:layout_constraintTop_toBottomOf="@+id/dividebtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/minusbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/minus"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/equalsbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/threebtn"
        app:layout_constraintTop_toBottomOf="@+id/timesbtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/pointbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/point"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zerobtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onebtn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/plusbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:autoSizeTextType="uniform"
        android:text="@string/plus"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalsbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zerobtn"
        app:layout_constraintTop_toBottomOf="@+id/threebtn"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/equationString"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/clearbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editNum"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:autoSizeTextType="uniform"
        android:editable="false"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/dividebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clearbtn"
        app:layout_constraintTop_toBottomOf="@+id/equationString"
        app:layout_constraintVertical_bias="0.5"
        tools:text="editNumber" />

    <Button
        android:id="@+id/clearbtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/sevenbtn"
        app:layout_constraintEnd_toStartOf="@+id/editNum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equationString"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>